Reestructure directories and files

--- a/src/notebooks/Test.ipynb
+++ b/src/notebooks/Test.ipynb
@@ -79,7 +79,7 @@
     }
    ],
    "source": [
-    "from modules import preprocessing\n",
+    "from ..modules import preprocessing\n",
     "import polars as pl\n",
     "\n",
     "dtypes = {\n",
