Update modules and scripts

--- a/src/notebooks/Test.ipynb
+++ b/src/notebooks/Test.ipynb
@@ -107,6 +107,146 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import polars as pl\n",
+    "\n",
+    "dtypes = {\n",
+    "    'user_name':pl.Utf8,\n",
+    "    'user_location':pl.Utf8,\n",
+    "    'user_description':pl.Utf8,\n",
+    "    'user_created':pl.Utf8,\n",
+    "    'user_followers':pl.Utf8,\n",
+    "    'user_friends':pl.Utf8,\n",
+    "    'user_favourites':pl.Utf8,\n",
+    "    'user_verified':pl.Utf8,\n",
+    "    'date':pl.Utf8,\n",
+    "    'text':pl.Utf8,\n",
+    "    'hashtags':pl.Utf8,\n",
+    "    'source':pl.Utf8,\n",
+    "    'is_retweet':pl.Utf8\n",
+    "}\n",
+    "encode = 'ISO-8859-1'\n",
+    "df = pl.read_csv(\"../../data/training.1600000.processed.noemoticon.csv\", has_header=False, encoding=encode, new_columns=[\"polarity\", \"id\", \"date\", \"flag\", \"user\", \"text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr > th,\n",
+       ".dataframe > tbody > tr > td {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 6)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>polarity</th><th>id</th><th>date</th><th>flag</th><th>user</th><th>text</th></tr><tr><td>i64</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>0</td><td>1467810369</td><td>&quot;Mon Apr 06 22:…</td><td>&quot;NO_QUERY&quot;</td><td>&quot;_TheSpecialOne…</td><td>&quot;@switchfoot ht…</td></tr><tr><td>0</td><td>1467810672</td><td>&quot;Mon Apr 06 22:…</td><td>&quot;NO_QUERY&quot;</td><td>&quot;scotthamilton&quot;</td><td>&quot;is upset that …</td></tr><tr><td>0</td><td>1467810917</td><td>&quot;Mon Apr 06 22:…</td><td>&quot;NO_QUERY&quot;</td><td>&quot;mattycus&quot;</td><td>&quot;@Kenichan I di…</td></tr><tr><td>0</td><td>1467811184</td><td>&quot;Mon Apr 06 22:…</td><td>&quot;NO_QUERY&quot;</td><td>&quot;ElleCTF&quot;</td><td>&quot;my whole body …</td></tr><tr><td>0</td><td>1467811193</td><td>&quot;Mon Apr 06 22:…</td><td>&quot;NO_QUERY&quot;</td><td>&quot;Karoli&quot;</td><td>&quot;@nationwidecla…</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 6)\n",
+       "┌──────────┬────────────┬──────────────────────┬──────────┬─────────────────┬──────────────────────┐\n",
+       "│ polarity ┆ id         ┆ date                 ┆ flag     ┆ user            ┆ text                 │\n",
+       "│ ---      ┆ ---        ┆ ---                  ┆ ---      ┆ ---             ┆ ---                  │\n",
+       "│ i64      ┆ i64        ┆ str                  ┆ str      ┆ str             ┆ str                  │\n",
+       "╞══════════╪════════════╪══════════════════════╪══════════╪═════════════════╪══════════════════════╡\n",
+       "│ 0        ┆ 1467810369 ┆ Mon Apr 06 22:19:45  ┆ NO_QUERY ┆ _TheSpecialOne_ ┆ @switchfoot http://t │\n",
+       "│          ┆            ┆ PDT 2009             ┆          ┆                 ┆ witpic.com/2…        │\n",
+       "│ 0        ┆ 1467810672 ┆ Mon Apr 06 22:19:49  ┆ NO_QUERY ┆ scotthamilton   ┆ is upset that he     │\n",
+       "│          ┆            ┆ PDT 2009             ┆          ┆                 ┆ can't update hi…     │\n",
+       "│ 0        ┆ 1467810917 ┆ Mon Apr 06 22:19:53  ┆ NO_QUERY ┆ mattycus        ┆ @Kenichan I dived    │\n",
+       "│          ┆            ┆ PDT 2009             ┆          ┆                 ┆ many times for…      │\n",
+       "│ 0        ┆ 1467811184 ┆ Mon Apr 06 22:19:57  ┆ NO_QUERY ┆ ElleCTF         ┆ my whole body feels  │\n",
+       "│          ┆            ┆ PDT 2009             ┆          ┆                 ┆ itchy and li…        │\n",
+       "│ 0        ┆ 1467811193 ┆ Mon Apr 06 22:19:57  ┆ NO_QUERY ┆ Karoli          ┆ @nationwideclass no, │\n",
+       "│          ┆            ┆ PDT 2009             ┆          ┆                 ┆ it's not be…         │\n",
+       "└──────────┴────────────┴──────────────────────┴──────────┴─────────────────┴──────────────────────┘"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'src'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/jovyan/work/src/notebooks/Test.ipynb Cell 4\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell://attached-container%2B7b22636f6e7461696e65724e616d65223a222f663174742d73656e74696d656e742d616e616c797369732d6a7570797465722d31222c22637764223a225c5c5c5c77736c2e6c6f63616c686f73745c5c5562756e74755c5c686f6d655c5c55544650525c5c463154542d53656e74696d656e742d416e616c79736973227d/home/jovyan/work/src/notebooks/Test.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msys\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://attached-container%2B7b22636f6e7461696e65724e616d65223a222f663174742d73656e74696d656e742d616e616c797369732d6a7570797465722d31222c22637764223a225c5c5c5c77736c2e6c6f63616c686f73745c5c5562756e74755c5c686f6d655c5c55544650525c5c463154542d53656e74696d656e742d416e616c79736973227d/home/jovyan/work/src/notebooks/Test.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(\u001b[39m'\u001b[39m\u001b[39mwork/\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell://attached-container%2B7b22636f6e7461696e65724e616d65223a222f663174742d73656e74696d656e742d616e616c797369732d6a7570797465722d31222c22637764223a225c5c5c5c77736c2e6c6f63616c686f73745c5c5562756e74755c5c686f6d655c5c55544650525c5c463154542d53656e74696d656e742d416e616c79736973227d/home/jovyan/work/src/notebooks/Test.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msrc\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodules\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpreprocessing\u001b[39;00m \u001b[39mimport\u001b[39;00m text_preprocessing\n\u001b[1;32m      <a href='vscode-notebook-cell://attached-container%2B7b22636f6e7461696e65724e616d65223a222f663174742d73656e74696d656e742d616e616c797369732d6a7570797465722d31222c22637764223a225c5c5c5c77736c2e6c6f63616c686f73745c5c5562756e74755c5c686f6d655c5c55544650525c5c463154542d53656e74696d656e742d416e616c79736973227d/home/jovyan/work/src/notebooks/Test.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpreprocess_s140_dataset\u001b[39m(raw_data_path, preprocessed_data_path):\n\u001b[1;32m      <a href='vscode-notebook-cell://attached-container%2B7b22636f6e7461696e65724e616d65223a222f663174742d73656e74696d656e742d616e616c797369732d6a7570797465722d31222c22637764223a225c5c5c5c77736c2e6c6f63616c686f73745c5c5562756e74755c5c686f6d655c5c55544650525c5c463154542d53656e74696d656e742d416e616c79736973227d/home/jovyan/work/src/notebooks/Test.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39m# Load the dataset\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://attached-container%2B7b22636f6e7461696e65724e616d65223a222f663174742d73656e74696d656e742d616e616c797369732d6a7570797465722d31222c22637764223a225c5c5c5c77736c2e6c6f63616c686f73745c5c5562756e74755c5c686f6d655c5c55544650525c5c463154542d53656e74696d656e742d416e616c79736973227d/home/jovyan/work/src/notebooks/Test.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m     encode \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mISO-8859-1\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'src'"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import polars as pl\n",
+    "from pathlib import Path\n",
+    "\n",
+    "from src.modules.preprocessing import text_preprocessing\n",
+    "\n",
+    "def preprocess_s140_dataset(raw_data_path, preprocessed_data_path):\n",
+    "    # Load the dataset\n",
+    "    encode = 'ISO-8859-1'\n",
+    "    df = pl.read_csv(\"../../data/training.1600000.processed.noemoticon.csv\", has_header=False, encoding=encode, new_columns=[\"polarity\", \"id\", \"date\", \"flag\", \"user\", \"text\"])\n",
+    "    \n",
+    "    # Create a new column for the preprocessed text\n",
+    "    df = df.with_column(\n",
+    "        df[\"text\"].apply(lambda text: preprocessing.text_preprocessing(text)).alias(\"preprocessed_text\")\n",
+    "    )\n",
+    "\n",
+    "    # Save the preprocessed dataset\n",
+    "    df.write_csv(preprocessed_data_path)\n",
+    "\n",
+    "\n",
+    "def preprocess_f1_dataset(raw_data_path, preprocessed_f1_data_path):\n",
+    "    # Load the dataset\n",
+    "    dtypes = {\n",
+    "        'user_name':pl.Utf8,\n",
+    "        'user_location':pl.Utf8,\n",
+    "        'user_description':pl.Utf8,\n",
+    "        'user_created':pl.Utf8,\n",
+    "        'user_followers':pl.Utf8,\n",
+    "        'user_friends':pl.Utf8,\n",
+    "        'user_favourites':pl.Utf8,\n",
+    "        'user_verified':pl.Utf8,\n",
+    "        'date':pl.Utf8,\n",
+    "        'text':pl.Utf8,\n",
+    "        'hashtags':pl.Utf8,\n",
+    "        'source':pl.Utf8,\n",
+    "        'is_retweet':pl.Utf8\n",
+    "    }\n",
+    "    encode = 'Utf8'\n",
+    "    df = pl.read_csv(\"../data/F1_tweets.csv\", dtypes=dtypes, encoding=encode)\n",
+    "    \n",
+    "    # Create a new column for the preprocessed text\n",
+    "    df = df.with_column(\n",
+    "        df[\"text\"].apply(lambda text: preprocessing.text_preprocessing(text)).alias(\"preprocessed_text\")\n",
+    "    )\n",
+    "\n",
+    "    # Save the preprocessed dataset\n",
+    "    df.write_csv(preprocessed_f1_data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
